<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rados.lf_sterowanie.MenuActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="1dp"
        android:onClick="testClick"
        android:text="@string/Test"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="@+id/guideline2"
        app:layout_constraintBottom_toTopOf="@+id/btnCompetition"/>

    <Button
        android:id="@+id/btnCompetition"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="1dp"
        android:onClick="competitionClick"
        android:text="@string/Competition"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/btnTest"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="@+id/guideline2"
        app:layout_constraintBottom_toTopOf="@+id/btnMotionControl" />

    <Button
        android:id="@+id/btnMotionControl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="1dp"
        android:onClick="motionControlClick"
        android:text="@string/MotionControl"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/btnCompetition"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="@+id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
